# process-performance-indicators

./: .gitignore  404.html  Makefile  README.md  extract_indicators.py  index.html  indicators_list.json  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: lint-check.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml
docs/: examples.md  index.md  installation.md  usage.md
docs/reference/: cost.md  flexibility.md  general.md  quality.md  time.md
examples/: dataset_configs.json  execute_indicators.py  index.html  run_all_examples.sh
examples/atomic_log/: atomic_event_log_formatted.csv  atomic_event_log_results.csv  atomic_event_log_summary.csv  indicators.py
examples/bpi_challenge_2013_incidents/: bpi-challenge-2013-incidents_results.csv  bpi-challenge-2013-incidents_summary.csv  indicators.py
examples/bpi_challenge_2017/: bpi-challenge-2017_100.csv  bpi-challenge-2017_formatted.csv  bpi-challenge-2017_results.csv  bpi-challenge-2017_summary.csv  indicators.py
examples/derivable_interval_log/: derivable_interval_event_log_formatted.csv  derivable_interval_event_log_results.csv  derivable_interval_event_log_summary.csv  indicators.py
examples/explicit_interval_log/: explicit_interval_event_log_formatted.csv  explicit_interval_event_log_results.csv  explicit_interval_event_log_summary.csv  indicators.py
examples/it_incident/: indicators.py  it-incident_formatted.csv  it-incident_results.csv  it-incident_summary.csv
examples/italian_help_desk/: indicators.py  italian-help-desk_formatted.csv  italian-help-desk_results.csv  italian-help-desk_summary.csv
examples/out_atomic_event_log/: formatted_atomic_event_log.csv  results_atomic_event_log.csv  summary_atomic_event_log.csv
examples/out_bpi-challenge-2013-incidents_100/: formatted_bpi-challenge-2013-incidents_100.csv  results_bpi-challenge-2013-incidents_100.csv  summary_bpi-challenge-2013-incidents_100.csv
examples/out_bpi-challenge-2017_100/: formatted_bpi-challenge-2017_100.csv  results_bpi-challenge-2017_100.csv  (+1 more)
installation/: index.html
process_performance_indicators/: __init__.py  column_mapping.py  constants.py  conversions.py  exceptions.py  log_formatter.py  match.py
reference/cost/: index.html
sample_event_logs/: minimal_1.csv
search/: search_index.json
tests/: __init__.py  conftest.py
usage/: index.html
(+101 files in other folders)
