[project]
name = "process-performance-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
]

[tool.setuptools]
packages = [ "process_performance_indicators" ]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "EM102",  # f strings in exceptions
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]
